ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mqttb-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "apple-health-ip"
    networking.gke.io/managed-certificates: "apple-health-cert"
spec:
  rules:
    - host: apple-health.apki.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mqttb
                port:
                  number: 8080
